fixed issue
fixed issue where home content was not centred as intended

--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,10 @@
-main {
-  display: flex;
-  justify-content: center;
-}
 .home-content {
   position: relative;
   display: flex;
   justify-content: center;
   flex-direction: column;
   max-width: 1600px;
+  margin: 0 auto;
 }
 .home-content-grid {
   display: flex;
