--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ main {
   margin: 8px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 h1,
 h2,
